--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,19 +6,20 @@
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
-        android:icon="@drawable/icon_rfid"
+        android:icon="@drawable/icon_app"
         android:label="@string/app_name"
-        android:roundIcon="@drawable/icon_rfid"
+        android:roundIcon="@drawable/icon_app"
         android:supportsRtl="true"
         android:theme="@style/Theme.Rfid_integrated_system_app"
         tools:targetApi="31">
+
         <activity
             android:name=".ui.navigation.NavigationActivity"
             android:exported="false"
             android:label="@string/title_activity_navigation" />
         <activity
             android:name=".ui.register.RegisterActivity"
-            android:exported="false"></activity>
+            android:exported="false" />
         <activity
             android:name=".ui.login.LoginActivity"
             android:exported="true"
@@ -30,5 +31,6 @@
             </intent-filter>
         </activity>
     </application>
+
 
 </manifest>
